# wemux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRIVACY.md  README.md  install.ps1
.github/workflows/: msix-release.yml  release.yml
dev/: 2025-12-07-httpschatgptcomshare6934b601-be9c-8005.txt  2025-12-08-build-gh.txt  2025-12-08-ps-fnocloudprojectrustwemux-wem.txt  2025-12-09-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-09-wemux-tray-debugterminalstdoutstd.txt  2025-12-10-wemux-tray-bug.txt  2025-12-11-085852 conversation.txt  2025-12-11-MSIX-pocessing.txt  2025-12-11-MSIX_STORE_PLAN.md  2025-12-11-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-11-caveat-the-messages-below-were-generated-by-the-u2.txt  2025-12-11-caveat-the-messages-below-were-generated-by-the-u3.txt  2025-12-11-fix-tray-env.txt  2025-12-11-left-click-toggle-engine.txt  2025-12-11-optimize.txt  2025-12-16-fix-hdmi-defalut.md
packaging/: AppxManifest.xml  README.md
packaging/staging/: AppxManifest.xml
scripts/: build_msix.ps1  generate_icons.ps1
src/: error.rs  lib.rs  main.rs
src/audio/: buffer.rs  capture.rs  engine.rs  hardware.rs  mod.rs  renderer.rs  volume.rs
src/config/: args.rs  mod.rs
src/device/: enumerator.rs  filter.rs  mod.rs  monitor.rs
src/service/: config.rs  mod.rs  runner.rs
src/sync/: clock.rs  mod.rs
src/tray/: app.rs  controller.rs  icon.rs  menu.rs  mod.rs  settings.rs
