[package]
name = "wemux"
version = "0.1.0"
edition = "2021"
authors = ["wen"]
description = "Windows Multi-HDMI Audio Sync - Duplicate system audio to multiple HDMI devices"
license = "MIT"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "implement",
]}

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Signal handling
[target.'cfg(windows)'.dependencies]
ctrlc = "3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
