[package]
name = "wemux"
version = "0.2.0"
edition = "2021"
authors = ["wen"]
description = "Windows Multi-HDMI Audio Sync - Duplicate system audio to multiple HDMI devices"
license = "MIT"

[[bin]]
name = "wemux"
path = "src/main.rs"

[[bin]]
name = "wemux-service"
path = "src/bin/wemux-service.rs"
required-features = ["service"]

[[bin]]
name = "wemux-tray"
path = "src/bin/wemux-tray.rs"
required-features = ["tray"]

[features]
default = []
service = ["windows-service"]
tray = ["tray-icon", "muda", "image"]

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "implement",
]}
windows-core = "0.58"

# System tray (optional)
tray-icon = { version = "0.19", optional = true }
muda = { version = "0.15", optional = true }
image = { version = "0.25", optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Signal handling
[target.'cfg(windows)'.dependencies]
ctrlc = "3"
windows-service = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Release profile configuration is handled via workflow environment variables
# See .github/workflows/release.yml for configuration
