[package]
name = "wemux"
version = "0.3.0"
edition = "2021"
authors = ["wen"]
description = "Windows Multi-HDMI Audio Sync - System tray application for duplicating audio to multiple HDMI devices"
license = "MIT"

[[bin]]
name = "wemux"
path = "src/main.rs"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "implement",
]}
windows-core = "0.58"

# System tray
tray-icon = "0.19"
muda = "0.15"
image = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Release profile configuration is handled via workflow environment variables
# See .github/workflows/release.yml for configuration
